system/monitoring/snmp-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snmp-exporter
  namespace: monitoring
  labels:
    app: snmp-exporter
spec:
  selector:
    app: snmp-exporter
  ports:
    - name: http
      port: 9116
      targetPort: http
