system/monitoring/grafana-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
  defaultBackend:
    service:
      name: kps-grafana
      port:
        number: 80
